# authface

./: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCKER_RUNNER_SETUP.md  Dockerfile  README.md  SELF_HOSTED_RUNNER_SETUP.md  SERVICE_INTEGRATION_PLAN.md  SETUP_DOCKER_SECRETS.md  UV_GUIDE.md  mypy.ini  pyproject.toml  requirements.txt  run_checks.sh
.github/workflows/: ci.yml  container-build.yml  data-release.yml
collector/: __init__.py  __main__.py  config.py  fetcher.py  pipeline.py  processor.py  summarizer.py
collector/commands/: __init__.py  run.py
config/: default.toml
containers/githubaction_summarization/: .dockerignore  Dockerfile  README.md  api-server.py  build.sh  deploy.sh  docker-compose.yml  entrypoint.sh  setup-runner.sh
containers/githubaction_summarization/.github/workflows/: build.yml
data/: feeds.yaml
scripts/: run_pipeline.py
src/: cloudflare.rs  jwt.rs  main.rs  models.rs  oidc.rs  tests.rs
tests/: test_commands.py  test_fetcher.py  test_processor.py
tests/sample_commands/: __init__.py
