[package]
name = "authface"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JWT handling
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

# OIDC and HTTP
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cloudflare KV
cloudflare = "0.12"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Async runtime
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Memory-efficient collections
dashmap = "5.5"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"